<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="402dp"
        android:layout_height="688dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_titulo" />

        <EditText
            android:id="@+id/etDocumento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etDocumento"
            android:inputType="number" />

        <EditText
            android:id="@+id/etNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etNombres"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etApellidos"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etUsuario"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etContra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etContra"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tvPath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btRegistrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="registrar"
                android:text="@string/btRegistrar" />

            <Button
                android:id="@+id/btBuscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="consultarUsuario"
                android:text="@string/btBuscar" />

            <Button
                android:id="@+id/btListar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="ListarUsuario2"
                android:text="@string/btListarResgistros" />

            <Button
                android:id="@+id/btLimpiar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Limpiar" />
        </TableRow>

        <ListView
            android:id="@+id/lvLista"
            android:layout_width="399dp"
            android:layout_height="382dp" >

        </ListView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>